tests/fixtures/invalid/bytes_bitand_str.py
# Cannot bitwise AND Bytes and Str
x: bytes = b"hello" & "hello"
